# mirrax_trajectory_generator

./: CMakeLists.txt  Readme.md  package.xml
include/mirrax_trajectory_generator/: kinematics.h  polynomial.h
scripts/: test_poly.py
src/: kinematics.cpp  polynomial.cc  polynomial_node.cc
